:fire: UPDATE: added base deps installer
Also updated installer.sh for including symlinks

--- a/configs/ironbar/gradient-bg.css
+++ b/configs/ironbar/gradient-bg.css
@@ -2,25 +2,25 @@ button,
 .window-title,
 .btn,
 .sysinfo {
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(90deg, #304352, #d7d2cc);
 }
 
 .popup-volume {
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(90deg, #304352, #d7d2cc);
 }
 
 .popup-bluetooth {
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(90deg, #304352, #d7d2cc);
 }
 
 .popup-clock {
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(90deg, #304352, #d7d2cc);
 }
 
 .popup-clock .calendar.view {
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(90deg, #304352, #d7d2cc);
 }
 
 .popup-clock .calendar:selected {
-    background: linear-gradient(to right, #000000, #434343);
+    background: linear-gradient(90deg, #304352, #d7d2cc);
 }
